[gd_scene load_steps=8 format=3 uid="uid://e3qatrq5014s"]

[ext_resource type="Script" uid="uid://ceh4yo7kmpqwv" path="res://Nodes/Bullets/bullet.gd" id="1_mehxd"]
[ext_resource type="Texture2D" uid="uid://dqf01e3h7ra0j" path="res://Sprites/tex_bullet.png" id="2_fdrq6"]
[ext_resource type="PackedScene" uid="uid://cmtjjeif550t7" path="res://ParticleEffects/bullet_tail_particle.tscn" id="3_8ncao"]
[ext_resource type="PackedScene" uid="uid://droidm2w1tl68" path="res://Materials/Glitch/glitch_effect_rect.tscn" id="4_yew82"]
[ext_resource type="Shader" uid="uid://dtrn714f27tws" path="res://Materials/Glitch/ma_glitch.gdshader" id="5_d21n7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y7oeu"]
resource_local_to_scene = true
shader = ExtResource("5_d21n7")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.1
shader_parameter/shake_speed = 0.1
shader_parameter/shake_block_size = 30.5
shader_parameter/shake_color_rate = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_ix6xb"]
radius = 7.0

[node name="bullet" type="Node2D" groups=["bullet"]]
script = ExtResource("1_mehxd")
speed = 100.0

[node name="bullet_sprite" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_fdrq6")

[node name="bullet_trail_particle" parent="bullet_sprite" instance=ExtResource("3_8ncao")]
show_behind_parent = true

[node name="glitch_effect_rect" parent="bullet_sprite" instance=ExtResource("4_yew82")]
material = SubResource("ShaderMaterial_y7oeu")
position = Vector2(-16.2, 0)
scale = Vector2(0.653125, 0.4)

[node name="bullet_hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="bullet_hitbox_shape" type="CollisionShape2D" parent="bullet_hitbox"]
shape = SubResource("CircleShape2D_ix6xb")

[node name="bullet_onscreen" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(-5.96046e-07, 3.57628e-07)
scale = Vector2(0.8, 0.8)

[connection signal="area_entered" from="bullet_hitbox" to="." method="_on_bullet_hitbox_area_entered"]
[connection signal="screen_entered" from="bullet_onscreen" to="." method="_on_bullet_onscreen_screen_entered"]
[connection signal="screen_exited" from="bullet_onscreen" to="." method="_on_bullet_onscreen_screen_exited"]
